♻️ refactor :  책 등록 api 메소드 네이밍 변경 및 리뷰 반영 (#5)
- 책 등록 api 메소드 네이밍 변경
- schema 정보 변경
- 오타 수정